src/styles/portfolio.css
/* ... */
#projects .experience .card-backdrop .hover-info .title {
  font-size: 22px;
  font-weight: bold;
  margin-bottom: 10px;
}
#projects .experience .card-backdrop .hover-info:hover {
  opacity: 1;
}
#projects .experience .card-backdrop.highlights {
  background: url(../assets/highlights-kids-homepage.jpg);
  background-size: 100%;
}
#projects .experience .card-backdrop.bluprint {
  background: url(../assets/bluprint-homepage.jpg);
  background-size: 100%;
}
#projects .experience .card-backdrop.stemscopes {
  background: url(../assets/stemscopes-homepage.jpg);
  background-size: 100%;
}
#projects .experience .card-backdrop.bitsbox {
  background: url(../assets/bitsbox-homepage.jpg);
  background-size: 100%;
}
#projects .experience .card-backdrop.bitsbox-store {
  background: url(../assets/bitsbox-storepage.jpg);
  background-size: 100%;
}
#projects .experience .card-backdrop.skoolie-locker-rentals {
  background: url(../assets/skoolie-locker-rentals.jpg);
  background-size: 100%;
}
#projects .experience .card-backdrop.bitsbox .description,
#projects .experience .card-backdrop.bitsbox-store .description,
#projects .experience .card-backdrop.skoolie-locker-rentals .description {
  font-size: 14px;
}
#projects .experience .card-backdrop:hover,
#projects .experience .selected.card-backdrop {
  background-size: 140%;
  background-position: -40px -40px;
}
#projects .experience .selected .hover-info {
  opacity: 1;
}

.blog-card {
  position: relative;
  vertical-align: top;
  display: inline-block;
  width: 280px;
  height: 195px;
  border: 1px solid #d9d9d9;
  border-radius: 12px;
  text-align: left;
  padding: 10px 16px;
  text-decoration: none;
  color: #e3e3e3;
}

.blog-card:hover {
  top: -2px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
}

.blog-card-image-container {
  width: 278px;
  height: 117px;
  overflow: hidden;
  margin: -10px -16px 10px -16px;
  border-bottom: 1px solid #d9d9d9;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.fit {
  max-width: 100%;
}

#footer {
  width: 100vw;
  height: 47px;
  background-color: #082f51;
  color: white;
  font-family: "Nunito";
  display: flex;
  justify-content: center;
  align-items: center;
}
.dark-mode #footer {
  background-color: #07233B;
}

#footer p {
  font-size: 14px;
  margin: 0;
}

/**
 * Responsive styles.
 */
@media screen and (max-width: 1000px) {
  #control-overlay .fake-social-links {
    transform: translate(-50%, calc(-50% + 64px));

    button {
      width: 32px;
      height: 32px;
    }
  }
}
@media screen and (max-width: 680px) {
  #control-overlay .fake-social-links {
    transform: translate(-50%, calc(-50% + 59px));

    button {
      width: 27px;
      height: 27px;
    }
  }
}
@media screen and (max-width: 600px) {
  #control-overlay .fake-social-links {
    transform: translate(-50%, calc(-50% + 65px));

    button {
      margin: 0 10px;
    }
  }
}
@media screen and (max-width: 450px) {
  #control-overlay .fake-social-links {
    transform: translate(-50%, calc(-50% + 55px));

    button {
      width: 20px;
      height: 20px;
    }
  }
}
@media screen and (max-width: 401px) {
  #control-overlay .fake-social-links button {
    margin: 0 8px;
  }
}
@media screen and (max-width: 380px) {
  #control-overlay .fake-social-links {
    transform: translate(-50%, calc(-50% + 64px));

    button {
      margin: 0 6px;
    }
  }
}

@media screen and (max-width: 1389px) {
  #about-me .portrait .headshot-container {
    scale: 0.9;
  }
  #projects .experience {
    justify-content: center;
  }
  #blogs.resume-section .experience {
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 0;
  }
}
@media screen and (max-width: 1330px) {
  #about-me .details {
    padding-right: 40px;
  }
  #download-resume-button {
    margin-left: 50px;
  }
}
@media screen and (max-width: 1200px) {
  #download-resume-container {
    display: block;
  }
  #download-resume-button {
    margin-left: 0;
  }
  #web-based-resume {
    padding: 60px 90px;
  }
}
@media screen and (max-width: 1167px) {
  #about-me .portrait .headshot-container {
    scale: 0.7;
  }
}
@media screen and (max-width: 1040px) {
  #about-me {
    flex-wrap: wrap;
    justify-content: center;
    padding-top: 60px;
  }
  #about-me .portrait {
    width: 100vw;
    padding: 0 20px;
    margin-left: 0;
    overflow: hidden;
  }
  #about-me .details {
    width: 67vw;
    padding-top: 20px;
    padding-bottom: 0;
  }
  #about-me h3 {
    margin-top: 10px;
  }
}
@media screen and (max-width: 1020px) {
  #about-me .portrait .headshot-container {
    scale: 0.5;
    margin-top: -44px;
  }
}
@media screen and (max-width: 1000px) {
  h2 {
    font-size: 42px;
  }
  #hero .content p {
    font-size: 15px;
  }
  #hero .content p .bold {
    font-size: 16px;
  }
  .social-links svg {
    font-size: 32px;
  }
  #navbar {
    column-gap: 60px;
  }
  #navbar .link {
    font-size: 16px;
  }
  .resume-section .experience,
  #tool-belt {
    padding: 0 80px;
  }
}
@media screen and (max-width: 875px) {
  #projects .experience .card-backdrop .hover-info {
    padding-top: 10%;
    padding-bottom: 66px;
  }
}
@media screen and (max-width: 845px) {
  #download-resume-container {
    display: block;
  }
  #projects .experience .card-backdrop .hover-info {
    padding-top: 10%;
    padding-bottom: 77px;
    font-size: 13px;
  }
}
/* ... */

